RESOLVED FIXED171754
Put does not properly consult the prototype chain
https://bugs.webkit.org/show_bug.cgi?id=171754
Summary Put does not properly consult the prototype chain
Keith Miller
Reported 2017-05-05 15:23:58 PDT
Put does not properly consult the prototype chain
Attachments
Patch (3.86 KB, patch)
2017-05-05 17:08 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2017-05-05 17:08:52 PDT
WebKit Commit Bot
Comment 2 2017-05-05 22:19:43 PDT
Comment on attachment 309244 [details] Patch Clearing flags on attachment: 309244 Committed r216309: <http://trac.webkit.org/changeset/216309>
WebKit Commit Bot
Comment 3 2017-05-05 22:19:44 PDT
All reviewed patches have been landed. Closing bug.
David Kilzer (:ddkilzer)
Comment 4 2017-07-20 15:26:55 PDT
*** Bug 171137 has been marked as a duplicate of this bug. ***
Note You need to log in before you can comment on or make changes to this bug.